<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_date_default"
        android:entries="@array/settings_order_date_labels"
        android:entryValues="@array/settings_order_date_values"
        android:key="@string/settings_order_date_key"
        android:title="@string/settings_order_date_label" />

    <ListPreference
        android:defaultValue="@string/settings_show_thumbnail_default"
        android:entries="@array/settings_show_thumbnail_labels"
        android:entryValues="@array/settings_show_thumbnail_values"
        android:key="@string/settings_show_thumbnail_key"
        android:title="@string/settings_show_thumbnail_label" />

</PreferenceScreen>